[project]
name = "neurion-ganglion-ion"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryon",email = "zhangruiyang36@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "neurion-ganglion",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
