[project]
name = "neurion-sanctum-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryon",email = "zhangruiyang36@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "neurion-sanctum (>=0.2.0,<0.3.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "boto3 (>=1.37.3,<2.0.0)",
    "cryptography (>=44.0.1,<45.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
